# practice_harman

./: CMakeLists.txt  README.md
data/practice5/ascii_art/: ascii_art_cat__paragraph__table.txt  table.txt
data/practice7/ascii_art/: ascii_art_cat.txt  paragraph.txt  words32_letters112.txt
modules/: CMakeLists.txt
modules/document_parser/: CMakeLists.txt
modules/document_parser/include/: Document.h
modules/document_parser/src/: Document.cpp  Element.cpp  asciiart.cpp  documentbase.cpp  paragraph.cpp  table.cpp
modules/order_vector/: CMakeLists.txt
modules/order_vector/include/: order_vector.h
modules/stringmod/: CMakeLists.txt
modules/stringmod/include/: stringmod.h
modules/stringmod/src/: stringmod.cpp
samples/: CMakeLists.txt  practice1_integrals.cpp  practice2_string_replace.cpp  practice3_stringmod.cpp  practice5_displaytxt.cpp  practice6_order_vector.cpp  practice7_quick_sort.cpp
samples/qt_practice1_draw/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydialog.cpp  mydialog.h
samples/qt_practice2_mvc/: CMakeLists.txt  TableModel.cpp  TableModel.h  combodelegate.cpp  combodelegate.h  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h  resources.qrc
samples/qt_practice3_thread/: CMakeLists.txt  filter.cpp  filter.h  filterthread.cpp  filterthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingsdialogs.cpp  settingsdialogs.h
